// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <h5
    className="Heading"
  >
    <div
      className="hashLinkContainer"
    >
      <a
        data-testid="Hash Link"
        href="#test-link"
        id="test-link"
      >
        <span
          className="ScreenReaderOnly"
        >
          Scroll Link for 
          Test
        </span>
        <svg
          className="icon"
        />
      </a>
      Test
    </div>
  </h5>
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <h2
    className="Heading"
  >
    <div
      className="hashLinkContainer"
    >
      <a
        data-testid="Hash Link"
        href="#test-link"
        id="test-link"
      >
        <span
          className="ScreenReaderOnly"
        >
          Scroll Link for 
          Test
        </span>
        <svg
          className="icon"
        />
      </a>
      Test
    </div>
  </h2>
</div>
`;
